# ant

./: .coverage  README.md  langton_state.yml  pyproject.toml
ant/: __init__.py  ant.py  board.py  cmd_line.py  dir.py  game.py  main.py  tile.py
tests/: test_ant.py  tests_tile.py
